Fixed Too many things for one commit, such as: 	- Changed "Report" to "Feedback" in the Report Modal 	- Added Event Title to the Report Modal 	- Added a bootstrap patch that makes bootstrap modals more responsive and work on iOS/Android 	- Removed inline bootstrap from index.html and had it installed via npm and correctly injected for angular via angular-cli.json

--- a/the8eam/src/app/report/report.component.css
+++ b/the8eam/src/app/report/report.component.css
@@ -1,83 +1,25 @@
-.modal-dialog{
-  top: 25%;
+/* Extra Small Devices*/
+#report-modal{
+  top:25%;
 }
-/*.no-gutter{*/
-  /*padding: 0;*/
-/*}*/
 .report-header{
   padding:0;
 }
 .close-report{
   padding: 15px 15px 0 0;
 }
+.report-event{
+  max-height:40px; /*two lines*/
+  overflow:hidden;
+}
+.report-event:after{
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 70%;
+  height: 20px;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
+}
 
-/*div + div {*/
-  /*margin-top: 3em;*/
-/*}*/
-
-/*label{*/
-  /*display: inline-block;*/
-  /*width: 100px;*/
-/*}*/
-/*textarea{*/
-
-  /*width: 300px;*/
-  /*height: 100px;*/
-
-
-  /*border: 1px gray;*/
-/*}*/
-
-/*div{*/
-
-/*}*/
-
-/*input{*/
-
-  /*width: 300px;*/
-  /*height: 30px;*/
-  /*border: none;*/
-
-  /*background-color: gray;*/
-/*}*/
-/*input:focus, textarea:focus{*/
-  /*border-color: #000000;*/
-/*}*/
-
-/*textarea{*/
-  /*vertical-align: top;*/
-  /*resize: vertical;*/
-  /*border:none;*/
-  /*background-color: gray;*/
-/*}*/
-/*.button{*/
-  /*padding-left: 90px;*/
-/*}*/
-/*#submitbutton*/
-/*{*/
-  /*border: none;*/
-  /*color: white;*/
-  /*padding: 15px 32px;*/
-  /*text-align: center;*/
-  /*display: inline-block;*/
-  /*font-size: 18px;*/
-  /*margin: 4px 2px;*/
-  /*cursor: pointer;*/
-  /*background-color: #ff3021;*/
-
-  /*position: relative;*/
-
-
-
-/*}*/
-/*#close{*/
-  /*border: none;*/
-  /*background-color: darkblue;*/
-  /*color: white;*/
-  /*padding:10px;*/
-  /*text-align: center;*/
-  /*display: inline-block;*/
-  /*margin: 4px 2px;*/
-  /*cursor: pointer;*/
-  /*position: relative;*/
-/*}*/
